--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -1,3 +1,6 @@
-$codDeFundo: #040714;
+$corDeFundo: #040714;
 $corTextoPrincpal: silver;
 $corTextoSecundario: #f9f9f9;
+$corDeFundoBotaoPrimario: #6421ff;
+$corDeFundoBotaoSecundario: #0063e5;
+$corDeFundoBotaoDark: #000;
